--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "blowitallaway": "node ./data/load-sample-data.js --delete",
     "now": "now -e DB_USER=@db_user -e DB_PASS=@db_pass -e NODE_ENV=\"production\" -e PORT=80",
     "nuke": "npm cache verify && rm -rf node_modules && npm install",
-    "lint": "eslint controllers data handlers models routes"
+    "lint": "eslint controllers data handlers models routes",
+    "fix": "npm run lint -- --fix"
   },
   "browserslist": "last 3 versions",
   "dependencies": {
