--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "scripts": {
     "prod": "node ./start.js",
     "watch": "nodemon ./start.js --ignore public/",
-    "start": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
+    "clean": "npm cache verify && echo 'Cache cleaned.'",
+    "dev": "npm run verifynode && npm run clean && concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
     "assets": "webpack -w --display-max-modules 0",
     "sample": "node ./data/load-sample-data.js",
     "blowitallaway": "node ./data/load-sample-data.js --delete",
     "now": "now -e DB_USER=@db_user -e DB_PASS=@db_pass -e NODE_ENV=\"production\" -e PORT=80",
-    "nuke": "npm run verifynode && npm cache verify && rm -rf node_modules && npm install",
+    "nuke": "npm run verifynode && npm run clean && rm -rf node_modules && npm install",
     "lint": "eslint controllers data handlers models routes",
     "fix": "npm run lint -- --fix",
     "verifynode": "node ./scripts/callVerifyNode.js"
