--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "blowitallaway": "node ./data/load-sample-data.js --delete",
     "now": "now -e DB_USER=@db_user -e DB_PASS=@db_pass -e NODE_ENV=\"production\" -e PORT=80",
     "nuke": "npm run verifynode && npm run clean && rm -rf node_modules && npm install",
-    "lint": "eslint controllers data handlers models routes",
+    "lint": "eslint .",
     "fix": "npm run lint -- --fix",
     "verifynode": "node ./scripts/verifyNode.js"
   },
