Open localhost automatically when running dev

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prod": "node ./start.js",
     "watch": "nodemon --legacy-watch ./start.js --ignore public/",
     "clean": "npm cache verify && echo 'Cache cleaned.'",
-    "dev": "npm run verifynode && npm run clean && concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
+    "dev": "npm run verifynode && node ./scripts/openInBrowser.js && npm run clean && concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
     "assets": "webpack -w --display-max-modules 0",
     "sample": "node ./data/load-sample-data.js",
     "blowitallaway": "node ./data/load-sample-data.js --delete",
@@ -45,6 +45,7 @@
     "mongoose-mongodb-errors": "0.0.2",
     "multer": "1.3.0",
     "nodemailer": "3.1.5",
+    "open": "0.0.5",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "passport-local-mongoose": "4.0.0",
